<resources>
    <string name="app_name">App</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="my_first_app">My first app</string>
    <string name="homework1">Homework№1</string>
    <string name="flags">Flags</string>
    <string name="animation">animation</string>
    <string name="homework_2">Homework№2</string>
    <string name="homework_3">Homework№3</string>
    <string name="homework_4">Homework№4</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="dead">Dead</string>
    <string name="_0">0</string>
    <string name="_1_confirmed">+ 1 Confirmed</string>
    <string name="_1_recovered">+ 1 Recovered</string>
    <string name="_1_dead">+ 1 Dead</string>
    <string name="refresh_data">Refresh data</string>
    <string name="add_top">Add top</string>
    <string name="add_bottom">Add bottom</string>
    <string name="remove_bottom">Remove bottom</string>
    <string name="remove_top">Remove top</string>
    <string name="add_flower">Add Flower</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="url">URL</string>
    <string name="flower_added">Flower is added</string>
    <string name="fill_data">Fill full data, please</string>
    <string name="homework_5">Homework№5</string>
    <string name="snacks">Snacks:</string>
    <string name="portrait" translatable="false">portrait</string>
    <string name="landscape" translatable="false">landscape</string>
    <string name="homework_6">Homework№6</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>

</resources>
