<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Homework1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Homework2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Homework1Button" />

    <Button
        android:id="@+id/Homework3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Homework2Button" />

    <Button
        android:id="@+id/Homework4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Homework3Button" />
</androidx.constraintlayout.widget.ConstraintLayout>