<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homework4.activities.MainActivity">

    <Button
        android:id="@+id/addTopFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_top"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addBottomFragment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addBottomFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removeBottomFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_bottom"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/removeTopFragment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_top"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/removeBottomFragment"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addFlower"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_flower"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addBottomFragment"
        app:layout_constraintEnd_toStartOf="@+id/removeBottomFragment"/>

    <FrameLayout
        android:id="@+id/topFragmentInMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>


    <FrameLayout
        android:id="@+id/bottomFragmentInMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topFragmentInMain"/>

</androidx.constraintlayout.widget.ConstraintLayout>